fixes alignment of multiple images

--- a/assets/css/partials/_project-image.scss
+++ b/assets/css/partials/_project-image.scss
@@ -39,6 +39,7 @@
   text-align: center;
 
   @include breakpoint(screen-sm) {
+    align-items: flex-end;
     display: flex;
   }
 
